@@ -44,7 +44,7 @@ public class BookService {
     public List<BookDto> getAllBooks() {
         return bookRepository.findAll().stream()
                 .map(bookMapper::toDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public BookDto getBookById(Long id) {
@@ -89,18 +89,44 @@ public class BookService {
     public List<BookDto> getBooksByAuthor(String author) {
         return bookRepository.findByAuthor(author).stream()
                 .map(bookMapper::toDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public List<BookDto> getBooksByAuthorId(Long authorId) {
         return bookRepository.findByAuthorEntityId(authorId).stream()
                 .map(bookMapper::toDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public List<BookDto> getBooksByCategoryId(Long categoryId) {
         return bookRepository.findByCategoriesId(categoryId).stream()
                 .map(bookMapper::toDto)
-                .toList();
+                .collect(Collectors.toList());
+    }
+
+
+    public List<BookDto> getBooksByAuthorNameJPQL(String authorName) {
+        return bookRepository.findBooksByAuthorNameJPQL(authorName).stream()
+                .map(bookMapper::toDto)
+                .collect(Collectors.toList());
+    }
+
+
+    public List<BookDto> getBooksByAuthorNameContainingJPQL(String authorName) {
+        return bookRepository.findBooksByAuthorNameContainingJPQL(authorName).stream()
+                .map(bookMapper::toDto)
+                .collect(Collectors.toList());
+    }
+
+    public List<BookDto> getBooksByAuthorNameNative(String authorName) {
+        return bookRepository.findBooksByAuthorNameNative(authorName).stream()
+                .map(bookMapper::toDto)
+                .collect(Collectors.toList());
+    }
+
+    public List<BookDto> getBooksByAuthorNameContainingNative(String authorName) {
+        return bookRepository.findBooksByAuthorNameContainingNative(authorName).stream()
+                .map(bookMapper::toDto)
+                .collect(Collectors.toList());
     }
 }
